--- a/tutorials/[Tutorial 2.0 - 23] - DataDriven Period Assesment Modeling.ipynb
+++ b/tutorials/[Tutorial 2.0 - 23] - DataDriven Period Assesment Modeling.ipynb
@@ -459,6 +459,8 @@
     "    x_new, y_new, err_new = xx[jr]+epo, model.predict(xx[jr]+epo, period=bp)+np.random.normal(0, 1e3), abs(np.random.normal(50, 5))\n",
     "    x_new0 = x_new%bp\n",
     "    XHI = chi_dof(y_new, err_new, model.predict(x_new0, period=bp), dof=8)\n",
+    "    \n",
+    "    #plt.errorbar(x_new0, y_new, yerr=err_new, fmt='.')\n",
     "\n",
     "    plt.scatter(x_new0, y_new, c=abs(XHI-4.3), vmin=0, vmax=20, \n",
     "               cmap='binary', s=(1/abs(XHI-4.3))*1e3, edgecolor='k')\n",
